feature: implement countdown

--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -1,3 +1,8 @@
 appTitle=com.countdowntimer.app
-appDescription=UI5 Application com.countdowntimer.app
-btnText=Say Hello
+appDescription=Countdown App
+mainpage.label.selectDate=Select Date:
+mainpage.label.day=Day(s):
+mainpage.label.hour=Hour(s):
+mainpage.label.minutes=Minute(s):
+mainpage.label.seconds=Second(s):
+mainpage.button.text.start=Start Countdown
